--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Analyse des données RéFérens III"
 author: "Antoine Blanchard"
-date: "24/02/2021"
+date: "01/03/2021"
 output:
   pdf_document: default
   html_document: default
@@ -84,7 +84,7 @@ data_filtered %>%
         axis.ticks.x=element_blank())
 ```
 
-On retrouve une distribution fortement asymétrique.
+On observe une distribution fortement asymétrique.
 
 ## Fréquence de l'expression "données" par champ
 
@@ -106,8 +106,25 @@ denombrement %>%
   theme(legend.position = "none")
 ```
 
-Comme on pouvait s'y attendre, le terme données apparaît le plus dans les champs des fiches métiers qui décrivent les compétences opérationnelles (rang 1) et les activités principales (rang 2). Il apparaît assez peu dans l'intitulé des fiches métiers (voir plus loin pour une analyse détaillée), qui est au 9e rang, précédé du champ "intitulé précédent" qui mérite d'être creusé pour comprendre pourquoi certaines occurrences ont disparu. Au 6e rang, donc assez haut, on trouve le champ "Facteurs d'évolution à moyen terme" du métier qui vise, selon la documentation de RéFérens, à identifier les facteurs clés et en déduire leur impact qualitatif sur le métier.
+Comme on pouvait s'y attendre, le terme données apparaît le plus dans les champs des fiches métiers qui décrivent les compétences opérationnelles (rang 1) et les activités principales (rang 2). Il apparaît assez peu dans l'intitulé des fiches métiers (voir ci-après), qui est au 9e rang, précédé du champ "intitulé précédent" qui mérite d'être creusé pour comprendre pourquoi certaines occurrences ont disparu (voir plus loin). Au 6e rang, donc assez haut, on trouve le champ "Facteurs d'évolution à moyen terme" du métier qui vise, selon la documentation de RéFérens, à identifier les facteurs clés et en déduire leur impact qualitatif sur le métier.
 
+## Liste des 11 métiers dont l'intitulé contient l'expression "données"
+
+```{r 11_metiers}  
+intitule_TRUE <- denombrement %>%
+  filter(denombrement$referens_intitule >0 | denombrement$referens_metiers >0)
+
+intitule_filtered <- data_filtered %>%
+  filter(Id %in% intitule_TRUE$Id) %>%
+  mutate(Id = as.character(Id),
+         referens_cs=factor(referens_cs, levels = ordre_corps)) %>%
+  left_join(data_filtered %>% select(Id, somme), by = "Id") %>%
+  select(referens_intitule, referens_metiers, bap, referens_fap, referens_cs) %>%
+  group_by(bap) %>%
+  arrange(referens_cs, .by_group = TRUE)
+
+kable(intitule_filtered, caption = "Métiers incluant le terme 'données' dans leur intitulé")
+```
 
 ## Fréquence de l'expression "données" par BAP
 
@@ -137,7 +154,7 @@ BAP_filtered_pourcentage %>%
   scale_y_continuous(labels = scales::percent, limits = c(0,1))
 ```
 
-On constate que les BAP E et D possèdent en proportion la plus grande part de métiers liés aux données : c'est intéressant de voir le soutien à la recherche en SHS si haut. Les BAP A, B et C, qui concernent directement le soutien à la recherche, sont moins concernés par les données que les BAP F et J qui sont liés à l'administration de l'université et se retrouvent plutôt dans l'administration centrale. 
+On constate que les BAP E et D possèdent en proportion la plus grande part de métiers liés aux données : c'est intéressant de voir le soutien à la recherche en SHS si haut. Les BAP A, B et C, qui concernent directement le soutien à la recherche, sont moins concernés par les données que les BAP F et J qui sont liés à l'administration de l'université et se retrouvent plutôt dans l'administration centrale. 
 
 ## Fréquence de l'expression "données" par corps
 
@@ -179,24 +196,18 @@ data_filtered %>%
       labs(x= "BAP", y = "Nombre de fiches métiers", fill="Corps")
 ```
 
-## Liste des 11 métiers dont l'intitulé contient l'expression "données"
+En valeur absolue, le BAP F Culture, Communication, Production et diffusion des savoirs concentre le plus grand nombre de fiches métiers liées aux données, grâce à un nombre très important de métiers appartenant au corps des IE.
 
-```{r 11_metiers}  
-intitule_TRUE <- denombrement %>%
-  filter(denombrement$referens_intitule >0 | denombrement$referens_metiers >0)
+Nous voulons savoir quels sont ces métiers IE de la BAP F :
 
-intitule_filtered <- data_filtered %>%
-  filter(Id %in% intitule_TRUE$Id) %>%
-  mutate(Id = as.character(Id),
-         referens_cs=factor(referens_cs, levels = ordre_corps)) %>%
-  left_join(data_filtered %>% select(Id, somme), by = "Id") %>%
-  select(referens_intitule, referens_metiers, bap, referens_fap, referens_cs) %>%
-  group_by(bap) %>%
-  arrange(referens_cs, .by_group = TRUE)
-```
+## Liste des métiers IE de la BAP F liés aux données
 
-```{r intitule_filtered, echo = FALSE, results ='asis'}
-kable(intitule_filtered, caption = "Métiers incluant le terme 'données' dans leur intitulé")
+```{r metiers_ie_bapF, results ='asis'}
+temp <- data_filtered %>%
+  filter(referens_cs %in% c("IE") & referens_bap_id %in% c("F")) %>%
+  select (referens_intitule, bap, referens_fap, referens_cs, somme)
+
+  kable(temp, caption="Métiers IE de la BAP F liés aux données") 
 ```
 
 ## Métiers qui concentrent le plus le terme "données"
@@ -230,15 +241,14 @@ data_filtered %>%
 
 Il apparaît que les corps IE et IR ont la distribution la plus étirée par le haut, ce sont ceux où l'on trouve le plus les métiers **des** données.
 
-# TO DO
-
-## Regarder les métiers des BAP E, F, G, J où "données" apparaît comme facteur d'évolution moyen terme
+## Métiers des BAP E, F, G, J où "données" apparaît comme facteur d'évolution moyen terme
 
 ```{r evolution_metiers, results ='asis'}
 evolution_metiers <- data_filtered %>%
   mutate(Id = as.character(Id)) %>%
   left_join(denombrement %>% select(Id, referens_facteurs_d_evolution_moyen_terme), by = "Id") %>%
-  filter(referens_facteurs_d_evolution_moyen_terme.y >0 & referens_bap_id %in% c("E", "F", "G", "J")) %>%
+  filter(referens_facteurs_d_evolution_moyen_terme.y >0) %>%
+  filter(referens_bap_id %in% c("E", "F", "G", "J")) %>%
   group_by(bap) %>%
   arrange(referens_cs, .by_group = TRUE)
 
@@ -250,21 +260,23 @@ evolution_metiers_extrait <- evolution_metiers %>%
 
 Dans ces BAP liés à l'administration centrale, on remarque l'absence de la BAP J et la quasi-absence de la BAP G, dont aucun métier ne prend la donnée en compte pour leur évolution moyen terme. Pourtant, les entretiens que nous avons menés montrent que ces domaines de la gestion du patrimoine immobilier et du pilotage sont fortement amenés à évoluer dans le contexte de la donnée.
 
-## Regarder les métiers où "données" apparaît comme "intitulé précédent" et a disparu de l'intitulé actuel
+## Métiers où "données" apparaît comme "intitulé précédent" et a disparu de l'intitulé actuel
 
 ```{r suppression_metiers, results ='asis'}
-suppression_metiers <- data %>%
-    filter(Id %in% denombrement$Id) %>%
-    filter(denombrement$referens_intitule_precedent >0) %>%
-    filter(denombrement$referens_intitule == 0) %>%
-  mutate(Id = as.character(Id)) %>%
-  left_join(denombrement %>% select(Id, somme), by = "Id") %>%
-  arrange(desc(somme)) %>%
-  select(referens_intitule, bap, referens_fap, referens_intitule_precedent, referens_cs) %>%
-  group_by(bap)
+suppression_metiers <- denombrement %>%
+  filter(referens_intitule_precedent >0 & referens_intitule ==0) %>%
+  mutate(Id = as.character(Id)) %>% 
+  select(Id) %>%
+  left_join(data_filtered, by = "Id") %>%
+  select (referens_intitule, referens_intitule_precedent, bap, referens_fap, referens_cs) %>%
+  arrange(referens_cs) # Bug car ne s'ordonne pas par corps
 
-kable(evolution_metiers, caption = "Métiers dont l'ancien intitulé incluait le terme 'données' mais pas l'intitulé actuel")
+kable(suppression_metiers, caption = "Métiers dont l'ancien intitulé incluait le terme 'données' contrairement à l'intitulé actuel")
 ```
+
+Dans le premier cas il s'agit d'une évolution des missions, dans le second cas de la substitution du terme "données" par "information". Il faudrait voir dans quelle mesure cette substitution est significative ou non.
+
+# TO DO
 
 ## Afficher le terme "données" en kwic (keyword-in-context) et représenter son voisinage lexical (qualificatifs, verbes relatifs à des processus managériaux…)
 
