--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -60,9 +60,13 @@ denombrement <- data %>%
   filter(somme > 0) %>%
   arrange(desc(somme))
   
+# Classer les corps dans l'ordre hiérarchique
+ordre_corps <- c("ATRF", "TECH", "AI", "IE", "IR")
+
 data_filtered <- data %>%
   filter(Id %in% denombrement$Id) %>%
-  mutate(Id = as.character(Id)) %>%
+  mutate(Id = as.character(Id),
+         referens_cs=factor(referens_cs, levels = ordre_corps)) %>%
   left_join(denombrement %>% select(Id, somme), by = "Id") %>%
   arrange(desc(somme))
 ```
@@ -74,9 +78,6 @@ data_filtered <- data %>%
 On trace la distribution des `r nrow(data_filtered)` fiches métiers selon le nombre de fois où apparaît le terme "données" :
 
 ```{r distribution_corps, results ='asis'}
-# Classer les corps dans l'ordre hiérarchique
-ordre_corps <- c("ATRF", "TECH", "AI", "IE", "IR")
-
 data_filtered %>%
     mutate(referens_id = fct_reorder(referens_id, -somme),
          referens_cs=factor(referens_cs, levels = ordre_corps)) %>%
@@ -127,9 +128,8 @@ intitule_filtered <- data_filtered %>%
   mutate(Id = as.character(Id),
          referens_cs=factor(referens_cs, levels = ordre_corps)) %>%
   left_join(data_filtered %>% select(Id, somme), by = "Id") %>%
-  select(referens_intitule, referens_metiers, bap, referens_fap, referens_cs) %>%
-  group_by(bap) %>%
-  arrange(referens_cs, .by_group = TRUE)
+  select(referens_intitule, referens_metiers, bap, referens_fap, referens_cs, Id) %>%
+  arrange(bap,referens_cs)
 
 kable(intitule_filtered, caption = "Métiers incluant le terme 'données' dans leur intitulé")
 ```
@@ -207,7 +207,7 @@ data_filtered %>%
   ggplot(aes(x = referens_bap_id, fill=referens_cs)) +
     geom_bar() +
       labs(x= "BAP", y = "Nombre de fiches métiers", fill="Corps",
-           title="Nombre de fiches métiers liées aux données par corps et par BAP",
+           title="Nombre de fiches métiers liées aux données par corps et BAP",
          caption="Données MESRI – Visualisation CC-BY Antoine Blanchard / Datactivist") +
 theme_ipsum(grid="Y")
 ```
@@ -234,7 +234,7 @@ On classe les métiers qui concentrent le plus le terme "données" et on affiche
 top_metiers <- data_filtered %>%
   filter(somme >= 15) %>%
   arrange(desc(somme)) %>%
-  select (referens_intitule, bap, referens_fap, referens_cs, somme)
+  select (referens_intitule, bap, referens_fap, referens_cs, somme, Id)
 
 kable(top_metiers, caption = "Métiers incluant au moins 15 fois le terme 'données'")
 ```
@@ -288,7 +288,7 @@ suppression_metiers <- denombrement %>%
   select(Id) %>%
   left_join(data_filtered, by = "Id") %>%
   select (referens_intitule, referens_intitule_precedent, bap, referens_fap, referens_cs) %>%
-  arrange(referens_cs) # Bug car ne s'ordonne pas par corps
+  arrange(referens_cs) 
 
 kable(suppression_metiers, caption = "Métiers dont l'ancien intitulé incluait le terme 'données' contrairement à l'intitulé actuel")
 ```
