--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -1,12 +1,12 @@
 ---
 title: "Analyse des données RéFérens III"
 author: "Antoine Blanchard"
-date: "08/04/2021"
+date: "21/04/2021"
 output:
   html_document: default
-  pdf_document: default
   github_document:
    toc: true
+  pdf_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -23,6 +23,9 @@ library(knitr, quietly = TRUE)
 library(hrbrthemes, quietly = TRUE)
 library(ggrepel, quietly = TRUE)
 library(cluster, quietly=TRUE)
+library(tidytext, quietly=TRUE)
+library(stopwords, quietly=TRUE)
+library(SnowballC, quietly=TRUE)
 ```
 
 ## Import du référentiel métier RéFérens
@@ -92,7 +95,8 @@ data_filtered %>%
   theme_ipsum() +
   theme(axis.title.x=element_blank(),
         axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
+        axis.ticks.x=element_blank(),
+        panel.grid.major.x = element_blank())
 ```
 
 On observe une distribution fortement asymétrique, avec un décrochement à y=17. Nous sommes donc tentés de placer un seuil entre les fiches métiers qui forment une continuité de y=15 à y=1 et les 8 métiers où le terme apparaît 17 fois ou plus.
@@ -117,7 +121,8 @@ data_filtered %>%
   theme_ipsum() +
   theme(axis.title.x=element_blank(),
         axis.text.x=element_blank(),
-        axis.ticks.x=element_blank())
+        axis.ticks.x=element_blank(),
+        panel.grid.major.x = element_blank())
 ```
 
 Et sous forme de table :
@@ -138,7 +143,7 @@ On constate que ce sont majoritairement des métiers AI et IE, majoritairement e
 
 Dans quelles colonnes (variables) du jeu de données trouve-t-on le plus le terme "données" ?
 
-```{r frequence_par_variable}
+```{r frequence_par_variable, fig.width = 9, fig.height = 8}
 denombrement %>%
   select(-somme) %>%
   column_to_rownames("Id") %>%
@@ -149,6 +154,7 @@ denombrement %>%
   ggplot(aes(x=fct_reorder(variable, somme), y = somme)) +
   geom_col(aes(fill = variable), color = "grey50") +
   labs(x = "", y = "Nombre d'occurrences du terme ''données''",
+       title="Classement des variables selon \n le nombre d'occurrences du terme ''données''",
        caption="Données MESRI – Analyse CC-BY Antoine Blanchard / Datactivist")+
   coord_flip()+
   theme_ipsum() +
@@ -156,6 +162,19 @@ denombrement %>%
 ```
 
 Comme on pouvait s'y attendre, le terme données apparaît le plus dans les champs qui décrivent les compétences opérationnelles (rang 1) et les activités principales (rang 2) des fiches métiers. Il apparaît assez peu dans l'intitulé des fiches métiers (voir ci-après), qui est au 9e rang, précédé du champ "intitulé précédent" qui mérite d'être creusé pour comprendre pourquoi certaines occurrences ont disparu (voir plus loin). Au 6e rang, donc assez haut, on trouve le champ "Facteurs d'évolution à moyen terme" du métier qui vise, selon la documentation de RéFérens, à identifier les facteurs clés et en déduire leur impact qualitatif sur le métier.
+
+On regarde quelle place le terme "données" occupe comparativement aux autres termes les plus utilisés dans le champ "Facteurs d'évolution à moyen terme" :
+
+````{r tf_facteurs_d_evolution}
+data_filtered %>%
+  unnest_tokens(word, referens_facteurs_d_evolution_moyen_terme) %>%
+      mutate(stem = wordStem(word)) %>%
+  anti_join(get_stopwords(language = "fr")) %>%
+  count(stem, sort = TRUE) %>%
+  filter(n >25) 
+````
+
+Le terme “données” est même le terme qui revient le plus fréquemment (43 occurrences) dans le champ "Facteurs d'évolution à moyen terme" des fiches métiers après “développement” et apparentés (108) et “gestion” (45). 
 
 ## Liste des 11 métiers dont l'intitulé contient l'expression "données"
 
@@ -171,7 +190,7 @@ intitule_filtered <- data_filtered %>%
   select(referens_intitule, referens_metiers, bap, referens_fap, referens_cs, Id) %>%
   arrange(bap,referens_cs)
 
-kable(intitule_filtered, caption = "Métiers incluant le terme 'données' dans leur intitulé")
+kable(intitule_filtered, caption = "Métiers incluant le terme \"données\" dans leur intitulé")
 ```
 
 Ensemble, ces deux listes de métiers obtenues par deux méthodes différentes (que le terme apparaisse au moins 17 fois ou qu'il apparaisse dans l'intitulé) forment une liste de 13 métiers-types que l'on peut qualifier de "métiers des données".
@@ -187,7 +206,7 @@ kable(metiers_donnee, caption = "Métiers des données")
 
 Proportion des fiches métiers qui contiennent l'expression "données" par BAP :
 
-```{r frequence_par_BAP, message=FALSE, warning=FALSE}
+```{r frequence_par_BAP, message=FALSE, warning=FALSE, fig.width=10}
 BAP_filtered <- data_filtered %>%
   count(bap) %>%
   arrange(bap)
@@ -204,7 +223,7 @@ BAP_filtered_pourcentage %>%
   ggplot(aes(x = bap, y = pourcentage_bap)) +
   geom_col(aes(fill = bap), color = "grey50") +
   labs(x = "", y = "Proportion",
-       title="Proportion de fiches métiers liées aux ''données'' par BAP",
+       title="Proportion de fiches métiers comprenant \nle terme \"données\" par BAP",
     caption="Données MESRI – Analyse CC-BY Antoine Blanchard / Datactivist") +
   theme_ipsum() +
   coord_flip() +
@@ -238,7 +257,7 @@ corps_filtered_pourcentage %>%
   ggplot(aes(x = referens_cs, y = pourcentage_corps)) +
   geom_col(aes(fill = referens_cs), color = "grey50") +
   labs(x = "Corps", y = "Proportion",
-       title="Proportion de fiches métiers liées aux ''données''\n par corps",
+       title="Proportion de fiches métiers comprenant \nle terme \"données\" par corps",
       caption="Données MESRI – Analyse CC-BY Antoine Blanchard / Datactivist") +
   coord_flip() +
   theme_ipsum(grid="X") +
@@ -256,7 +275,7 @@ data_filtered %>%
   ggplot(aes(x = referens_bap_id, fill=referens_cs)) +
     geom_bar() +
       labs(x= "BAP", y = "Nombre de fiches métiers", fill="Corps",
-           title="Nombre de fiches métiers liées aux données\n par corps et BAP",
+           title="Nombre de fiches métiers comprenant \nle terme \"données\" par corps et BAP",
          caption="Données MESRI – Analyse CC-BY Antoine Blanchard / Datactivist") +
 theme_ipsum(grid="Y")
 ```
@@ -288,7 +307,7 @@ data_filtered %>%
     geom_boxplot()+
   geom_jitter(shape=16, position=position_jitter (0.2)) +
     labs(x= "Corps", y = "Nombre d'occurrences du terme ''données''", color="Corps",
-         title="Dispersion des fiches métiers liées aux données\n par corps",
+         title="Dispersion des fiches métiers comprenant \nle terme \"données\" par corps",
          caption="Données MESRI – Analyse CC-BY Antoine Blanchard / Datactivist") +
   theme_ipsum() +
     theme(legend.position = "none")
