--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -366,4 +366,6 @@ Dans le premier cas il s'agit d'une évolution des missions, dans le second cas 
 
 ## Répéter les étapes avec le terme "archives"
 
+```{r save_workspace, results ='asis'}
 save.image(file = "my_workspace.RData")
+```
